--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="gallery">
         <h2 class="text">Some beautiful memories</h2>
         <div class="bento-container">
-            <div class="bento-item" style="grid-column: span 2; grid-row: span 2;"><video src="public/videos/Pyaar.mp4" controls alt="Image 1" loading="lazy" poster="public/images/img27.png"></div>
+            <div class="bento-item" style="grid-column: span 2; grid-row: span 2;"><video src="videos/Pyaar.mp4" controls alt="Image 1" loading="lazy" poster="public/images/img27.png"></div>
             <div class="bento-item"><img src="public/images/img2.png" alt="Image 1"></div>
             <div class="bento-item"><img src="public/images/img1.png" alt="Image 2"></div>
             <div class="bento-item" style="grid-column: span 2;"><img src="public/images/img3.png" alt="Image 3"></div>
