--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr.X & Mrs.Y - Love Journey</title>
+    <title>Love-Journey</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -14,15 +14,19 @@
     <div class="text">Eternal Love That Shines Bright ❤️</div>
     <div class="container-box">
         <div class="intro-box">
-            <h3>Mr. X</h3>
-            <p>An innovative engineer whose heart found its true spark in Mrs. Y.</p>
+            <!-- <h3>
+                Sneha
+            </h3> -->
+            <p style="width: 350px;">🌸 Sneha — Masoom si muskaan, dil se pyaar,
+                Rohit ke har din ka sukoon, har pal ka intezaar. 💖</p>
         </div>
         <div class="image-container floating-hearts">
             <img src="public/images/couple.png" alt="Mr. X & Mrs. Y" >
         </div>
-        <div class="intro-box">
-            <h3>Mrs. Y</h3>
-            <p>A compassionate doctor whose love for Mr. X grows stronger each day.</p>
+        <div class="intro-box" >
+            <!-- <h3>Mrs. Y</h3> -->
+            <p style="width: 350px;">🌙 Rohit — Saadgi mein chhupi shiddat, har baat mein pyaar,
+                Sneha ke liye sirf ek naam nahi, uska pura sansaar. 💫</p>
         </div>
     </div>
     <div class="timeline">
@@ -48,13 +52,8 @@
         <div class="timeline-item">
             <a href="trip-together.html"><div class="dot"></div></a>
             <div class="journey-box-up" style="background-color: #ffdd80;">
-                <div class="journey-box-header">First Meeting - 2019 </div>
-                <div class="journey-box-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Ea odio porro, alias iure unde id fuga doloremque itaque deserunt, 
-                    dicta minus quas? A assumenda odit ut sint repellat, sunt ex commodi
-                    reiciendis nesciunt non corrupti exercitationem, blanditiis molestias
-                    temporibus maxime. Sapiente quo inventore in eveniet. CorporisS
-                    possimus perferendis aperiam non.
+                <div class="journey-box-header"><u>Coming sooon 🚀</u></div>
+                <div class="journey-box-body"><h3 style="text-align: center; padding-top: 40px; font-family: stella; font-size: xx-large;" >Coming soon </h3>
                 </div>
             </div>
         </div>
