--- a/confessing-night.html
+++ b/confessing-night.html
@@ -6,6 +6,8 @@
     <title>Pyaar ki shuruwaat!!</title>
     <link rel="stylesheet" href="journey.css">
     <link rel="stylesheet" href="confessing-night.css">
+    <link rel="shortcut icon" href="/public/images/favicon.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
