--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Love-Journey</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/public/images/favicon.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
@@ -50,37 +51,27 @@
 
         </div>
         <div class="timeline-item">
-            <a href="trip-together.html"><div class="dot"></div></a>
+            <a href="part3.html"><div class="dot"></div></a>
             <div class="journey-box-up" style="background-color: #ffdd80;">
                 <div class="journey-box-header"><u>Coming sooon 🚀</u></div>
-                <div class="journey-box-body"><h3 style="text-align: center; padding-top: 40px; font-family: stella; font-size: xx-large;" >Coming soon </h3>
+                <div class="journey-box-body"><h3 style="text-align: center; padding-top: 45px; font-family: stella; font-size: xx-large;" >Coming soon </h3>
                 </div>
             </div>
         </div>
         <div class="timeline-item">
-            <a href="anniversary.html"><div class="dot"></div></a>
+            <a href="part4.html"><div class="dot"></div></a>
             <div class="journey-box-down" style="background-color: #D8BFD8;">
-                <div class="journey-box-header">First Meeting - 2019 </div>
-                <div class="journey-box-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Ea odio porro, alias iure unde id fuga doloremque itaque deserunt, 
-                    dicta minus quas? A assumenda odit ut sint repellat, sunt ex commodi
-                    reiciendis nesciunt non corrupti exercitationem, blanditiis molestias
-                    temporibus maxime. Sapiente quo inventore in eveniet. CorporisS
-                    possimus perferendis aperiam non.
+                <div class="journey-box-header"><u>Coming sooon 🚀</u></div>
+                <div class="journey-box-body"><h3 style="text-align: center; padding-top: 45px; font-family: stella; font-size: xx-large;" >Coming soon </h3>
                 </div>
                 
             </div>
         </div>
         <div class="timeline-item">
-            <a href="engagement.html"><div class="dot"></div></a>
-            <div class="journey-box-up" style="background-color: #F7CAC9 ;">
-                <div class="journey-box-header">First Meeting - 2019 </div>
-                <div class="journey-box-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Ea odio porro, alias iure unde id fuga doloremque itaque deserunt, 
-                    dicta minus quas? A assumenda odit ut sint repellat, sunt ex commodi
-                    reiciendis nesciunt non corrupti exercitationem, blanditiis molestias
-                    temporibus maxime. Sapiente quo inventore in eveniet. CorporisS
-                    possimus perferendis aperiam non.
+            <a href="part5.html"><div class="dot"></div></a>
+            <div class="journey-box-up" style="background-color: #F7CAC9;">
+                <div class="journey-box-header"><u>Coming sooon 🚀</u></div>
+                <div class="journey-box-body"><h3 style="text-align: center; padding-top: 40px; font-family: stella; font-size: xx-large;" >Coming soon </h3>
                 </div>
             </div>
         </div>
@@ -91,12 +82,12 @@
         <button class="surprise-btn" onclick="showSurpriseMessage()">Reveal Surprise 💖</button>
     </div>
     
-    <div class="countdown-timer">
+    <!-- <div class="countdown-timer">
         <h1 class="text">Togetherness Countdown 🤝</h1>
         <div id="countdown"></div>
         <div class="burst" id="burstEffect"></div>
         <div class="celebration" id="celebrationMessage">🎉 Happy Anniversary, Ruhi! 🎉</div>
-    </div>
+    </div> -->
 
     <div class="gallery">
         <h2 class="text">Some beautiful memories</h2>
