--- a/confessing-night.html
+++ b/confessing-night.html
@@ -110,7 +110,7 @@
 
     <div class="navigation">
         <div class="nav-total">
-           <a href="confessing-night.html">
+           <a href="part3.html">
             <img src="./public/images/Part1/arrow.png" height="40px" width="40px" alt="">
             </a>
             <p style="font-size: x-small;">Click here to view next storyline</p>
